Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22695

textDocument/documentSymbol is not sent until document is reopened

    XMLWordPrintable

Details

    • macOS
    • 3fbb5ddba873e65855e8cf4d9b404170746fc511 (qt-creator/qt-creator/4.10)

    Description

      When I open the first document in a project, no textDocument/documentSymbol request is sent to my language server, and no Outline is available.

      If I just close the document and open it again (by double clicking at the file under "Other files" in the Projects field), Qt Creator do send a textDocument/documentSymbol request and successfully populates its Outline field with the information from my language server.

      Se the log for details.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            per.mildner Per Mildner
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes